moved source files / slightly modified shell script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,12 @@
 # Set  the minimum  required version  of cmake  for a  project.
 cmake_minimum_required(VERSION 2.6)
 
-#C++11
+# C++11
 SET(CMAKE_CXX_FLAGS "-std=c++0x")
 
+# locate source files
+file(GLOB sources ${PROJECT_SOURCE_DIR}/src/*)
+
 # Add an executable to the project using the specified source files.
-add_executable(POLY2TET POLY2TET.cpp tetgen.cxx predicates.cxx ThreeVector.cpp FileGen.cpp)
+
+add_executable(POLY2TET POLY2TET.cpp ${sources})
