--- a/formats/Geant4/CMakeLists.txt
+++ b/formats/Geant4/CMakeLists.txt
@@ -2,7 +2,7 @@
 # Setup the project
 #
 cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
-project(PHANTOM)
+project(MRCP_AM_2)
 
 #----------------------------------------------------------------------------
 # Find Geant4 package, activating all available UI and Vis drivers by default
@@ -33,21 +33,21 @@ file(GLOB headers ${PROJECT_SOURCE_DIR}/include/*.hh)
 #----------------------------------------------------------------------------
 # Add the executable, and link it to the Geant4 libraries
 #
-add_executable(PHANTOM PHANTOM.cc ${sources} ${headers})
-target_link_libraries(PHANTOM ${Geant4_LIBRARIES})
+add_executable(MRCP_AM_2 MRCP_AM_2.cc ${sources} ${headers})
+target_link_libraries(MRCP_AM_2 ${Geant4_LIBRARIES})
 
 #----------------------------------------------------------------------------
 # Copy all scripts to the build directory. This is so that we can run the 
 # executable directly because it relies on these scripts being in the current 
 # working directory.
 #
-set(PHANTOM_SCRIPTS
+set(MRCP_AM_2_SCRIPTS
   example.in
   init_vis.mac
   vis.mac
   )
 
-foreach(_script ${PHANTOM_SCRIPTS})
+foreach(_script ${MRCP_AM_2_SCRIPTS})
   configure_file(
     ${PROJECT_SOURCE_DIR}/${_script}
     ${PROJECT_BINARY_DIR}/${_script}
@@ -58,4 +58,4 @@ endforeach()
 #----------------------------------------------------------------------------
 # Install the executable to 'bin' directory under CMAKE_INSTALL_PREFIX
 #
-install(TARGETS PHANTOM DESTINATION bin)
+install(TARGETS MRCP_AM_2 DESTINATION bin)
